src/objects/Project_Manager__c.object
<CustomObject>
    <description>Aeonvis Project Managers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PM email</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PM_name__c</fullName>
        <label>PM name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Project Manager</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PM_name__c</columns>
        <columns>Email__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PM surname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>